wso2-ei/tttt/ei-pattern-1/templates/analytics/dashboard/analytics-dashboard-service.yaml
---
# Source: ei-pattern-1/templates/analytics/dashboard/analytics-dashboard-service.yaml
# Copyright (c) 2018, WSO2 Inc. (http://www.wso2.org) All Rights Reserved.
#
# Licensed under the Apache License, Version 2.0 (the "License");
# you may not use this file except in compliance with the License.
# You may obtain a copy of the License at
#
# http://www.apache.org/licenses/LICENSE-2.0
#
# Unless required by applicable law or agreed to in writing, software
# distributed under the License is distributed on an "AS IS" BASIS,
# WITHOUT WARRANTIES OR CONDITIONS OF ANY KIND, either express or implied.
# See the License for the specific language governing permissions and
# limitations under the License.

apiVersion: v1
kind: Service
metadata:
  name: wso2ei-pattern-1-analytics-dashboard-service
  namespace : wso2-ei
  labels:
    app: wso2ei-pattern-1
    monitoring: jmx
spec:
  ports:
    # ports that this service should serve on
    -
      name: 'https'
      port: 9643
      protocol: TCP
    


  # label keys and values that must match in order to receive traffic for this service
  selector:
    deployment: wso2ei-pattern-1-analytics-dashboard
    app: wso2ei-pattern-1
    monitoring: jmx
